--- a/ContentBrowser/src/main/res/layout/pay_id_input_dialog.xml
+++ b/ContentBrowser/src/main/res/layout/pay_id_input_dialog.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:padding="20dp"
     android:layout_height="match_parent">
 
     <TextView
-        android:text="Enter PayID"
-        android:id="@+id/pay_id_hint"
+        android:text=""
+        android:id="@+id/pay_id_text"
+        android:paddingBottom="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:text=""
+        android:id="@+id/conversion_text"
+        android:paddingBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
 
     <EditText
+        android:inputType="text"
+        android:hint="@string/enter_payid"
         android:id="@+id/pay_id_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-
 
 </LinearLayout>
