--- a/TVUIComponent/lib/src/main/res/layout/wallet_input_dialog.xml
+++ b/TVUIComponent/lib/src/main/res/layout/wallet_input_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:orientation="vertical"
+    android:padding="20dp"
     android:layout_height="match_parent">
 
     <TextView
