--- a/Application/app/src/main/res/values/custom.xml
+++ b/Application/app/src/main/res/values/custom.xml
@@ -15,7 +15,7 @@ permissions and limitations under the License.
 -->
 <resources>
 
-    <string translatable="false" name="app_name">PayTVr</string>
+    <string translatable="false" name="app_name">PayTV</string>
     <!-- The app's display name that should have a max of 15 characters
          Currently used with recommendations on the Home Screen -->
     <string translatable="false" name="app_name_short">PayTV</string>
