--- a/ContentBrowser/src/main/res/layout/pay_id_input_dialog.xml
+++ b/ContentBrowser/src/main/res/layout/pay_id_input_dialog.xml
@@ -23,7 +23,7 @@
         android:inputType="text"
         android:hint="@string/enter_payid"
         android:id="@+id/pay_id_input"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
