--- a/ContentBrowser/src/main/res/layout/pay_id_input_dialog.xml
+++ b/ContentBrowser/src/main/res/layout/pay_id_input_dialog.xml
@@ -1,29 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:padding="20dp"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <TextView
-        android:text=""
         android:id="@+id/pay_id_text"
-        android:paddingBottom="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:text="" />
 
     <TextView
-        android:text=""
         android:id="@+id/conversion_text"
-        android:paddingBottom="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:text="" />
 
 
-    <EditText
-        android:inputType="text"
-        android:hint="@string/enter_payid"
-        android:id="@+id/pay_id_input"
+    <!--    <EditText-->
+    <!--        android:inputType="text"-->
+    <!--        android:hint="@string/enter_payid"-->
+    <!--        android:id="@+id/pay_id_input"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"/>-->
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:padding="40dp">
+
+            <TextView
+                android:id="@+id/btcText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BTC" />
+
+            <ImageView
+                android:id="@+id/btcImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:padding="40dp">
+            <TextView
+                android:id="@+id/xrpText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="XRP" />
+
+            <ImageView
+                android:id="@+id/xrpImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
